--- a/Organizer/organizer-menu.html
+++ b/Organizer/organizer-menu.html
@@ -19,14 +19,24 @@
             <a href="../Organizer/createProject/project.html">
             <button class="buttons">Create Project</button>
         </a>
-            <a href="../Organizer/deleteTask.html">
+            <a href="../Organizer/deleteTask/deleteTask.html">
             <button class="buttons">Delete Task</button>
-        </a>    
+        </a>  
+            <a href="../Organizer/deleteProject/deleteProject.html">
             <button class="buttons">Delete Project</button>
+        </a> 
+        <a href="../Organizer/findTask/findTask.html">
             <button class="buttons">Find Task</button>
+        </a>
+        <a href="../Organizer/findProject/findProject.html">  
             <button class="buttons">Find Project</button>
+        </a>     
+        <a href="../Organizer/updateTask/updateTask.html">
             <button class="buttons">Update Task</button>
+        </a>
+        <a href="../Organizer/updateProject/updateProject.html">
             <button class="buttons">Update Project</button>
+        </a>
         </div>
 
     </div>
