--- a/Organizer/updateProject/updateProject.html
+++ b/Organizer/updateProject/updateProject.html
@@ -4,12 +4,12 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
-    <link rel="stylesheet" href="./deleteTask.css">
+    <link rel="stylesheet" href="./updateProject.css">
 </head>
 <body>
     <div class="Wrapper">
         <div class="main">
-            <h1 class="text">Kindly Enter Details Of Your Id to Delete Task</h1>
+            <h1 class="text">Kindly Enter Your Id Details to Update Project</h1>
             <div class="wrap" id="wrap">
                 <form action="#" id="form">
                     <div>
@@ -20,9 +20,8 @@
                     </div>
                 </form>
             </div>
-        
         </div>
     </div>
-    <script src="deleteTask.js"></script>
+    <script src="updateProject.js" defer></script>
 </body>
 </html>
